# Orbit

./: README.md
About/: main.qml
DualSense/: AstreaComponents  GamepadWindow.qml  README.md  gamepad.qml
DualSense/backend/: DualSenseBackend.qml
DualSense/scripts/: dualsense_manager.py  test_dualsense_manager.py  test_qml_contract.py
Email/: Main.qml  README.md  shell.qml
Email/components/: AvatarBubble.qml  ComposeField.qml  ComposerSheet.qml  CountPill.qml  EmailSidebar.qml  FilterChip.qml  MailRow.qml  MessageDetailPane.qml  MessageListPane.qml  MetricPill.qml  SetupPanel.qml  TagPill.qml
Email/scripts/: gmail_bridge.py  test_email_cli.py  test_gmail_bridge.py  test_qml_contract.py
Email/services/: EmailCliClient.qml
Email/state/: MailStore.qml
Email/tools/: WebMailSnapshot.qml  WebMailViewer.qml  web_mail_snapshot_electron.js
Explorer/: AppState.qml  AstreaFiles  FileDialog.qml  Main.qml  PortalDialog.qml  QuickshellComponents  RELIABILITY_MANUAL_CHECKLIST.md  Theme.qml  explorer_helper.py  qmldir
Explorer/state/: DeviceNetworkState.qml  FileOperationsState.qml  NavigationState.qml  (+3 more)
MediaViewer/: Main.qml  media_viewer_helper.py  shell.qml
ScreenTime/: .gitignore  README.md  app_rules.json  astrea-screentimed-legacy.service  astrea-screentimed.service
ScreenTime/backend-rs/: Cargo.toml
ScreenTime/backend-rs/src/: lib.rs  main.rs
Settings/: main.qml
Wallpapers/: main.qml  main.qml.bak-before-polish
Weather/: AstreaComponents  AstreaI18n  WeatherApp.qml  qmldir
notepad/: Main.qml  README.md  Theme.qml  qmldir  shell.qml
(+101 files in other folders)
